prep for Heroku deploy. prior to modifying seetings (page 468-crass course)

--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -1,9 +1,11 @@
-
+{% load bootstrap3 %}
 
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="device-width, initial-scale=1">
     <title>Betr.TV</title>
   </head>
 
