--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -1,20 +1,21 @@
 {% load bootstrap3 %}
 
+
 <!DOCTYPE html>
-<html lang="en">
+
+<html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="device-width, initial-scale=1">
     <title>Betr.TV</title>
-  </head>
+  </head
+
 
   <body>
-    <h1>
-      Welcome to BetrTV. Empowerment on Demand!!
+    <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
+    <h1 style="color: grey; font-family: Gugi; font-size: 20px;">
+      BetrTV... Empowerment on Demand
     </h1>
 
-    <iframe width="1200" height="600" src="https://www.youtube.com/embed/MRuJCLbOAeA"
+    <iframe class="video-frame" width="1200" height="600" src="https://www.youtube.com/embed/MRuJCLbOAeA"
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
     picture-in-picture" allowfullscreen></iframe>
 
