1st iteration. All html and sourcesin view.py

--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -6,10 +6,12 @@
 <html>
   <head>
     <title>Betr.TV</title>
+
   </head
 
 
   <body>
+
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
     <h1 style="color: grey; font-family: Gugi; font-size: 20px;">
       BetrTV... Empowerment on Demand
@@ -19,18 +21,17 @@
     frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
     picture-in-picture" allowfullscreen></iframe>
 
-    <ol>
+
       <li>
-        <iframe width="727" height="409"
+        <iframe class="video-frame" width="1200" height="600"
         src="https://www.youtube.com/embed/h-F0uJC10Js" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
       </li>
       <li>
-        <iframe width="727" height="409"
+        <iframe class="video-frame" width="1200" height="600"
         src="https://www.youtube.com/embed/Lo3769VtgHM" frameborder="0"
         allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
         allowfullscreen></iframe>
       </li>
-    </ol>
   </body>
