--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -5,6 +5,15 @@
 
 <html>
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5S9053QREN"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-5S9053QREN');
+    </script>
     <title>Betr.TV</title>
 
   </head
