correction to Google analytics code

--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -14,9 +14,9 @@
 
       gtag('config', 'G-5S9053QREN');
     </script>
-    <title>Betr.TV</title>
+    <title>BetrTV</title>
 
-  </head
+  </head>
 
 
   <body>
