final goggle analytics update

--- a/betrTV_app/templates/betrTV_app/index.html
+++ b/betrTV_app/templates/betrTV_app/index.html
@@ -1,46 +1,5 @@
-{% load bootstrap3 %}
-
-
 <!DOCTYPE html>
 
-<html>
-  <head>
-      <!-- Global site tag (gtag.js) - Google Analytics -->
-      <script async src="https://www.googletagmanager.com/gtag/js?id=G-5S9053QREN"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'G-5S9053QREN');
-    </script>
-    <title>BetrTV</title>
-
-  </head>
-
-
-  <body>
-
-    <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
-    <h1 style="color: grey; font-family: Gugi; font-size: 20px;">
-      BetrTV... Empowerment on Demand
-    </h1>
-
-    <iframe class="video-frame" width="1200" height="600" src="https://www.youtube.com/embed/MRuJCLbOAeA"
-    frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
-    picture-in-picture" allowfullscreen></iframe>
-
-
-      <li>
-        <iframe class="video-frame" width="1200" height="600"
-        src="https://www.youtube.com/embed/h-F0uJC10Js" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-      </li>
-      <li>
-        <iframe class="video-frame" width="1200" height="600"
-        src="https://www.youtube.com/embed/Lo3769VtgHM" frameborder="0"
-        allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen></iframe>
-      </li>
-  </body>
+<body>
+<h1>This shouldn't be showing. If it is something is wrong. HTML in views.py file</h1>
+</body>
